--- a/README.rdoc
+++ b/README.rdoc
@@ -1,17 +1,26 @@
-==Index filter
+==sortable_index_filters
 
-It creates two objects:
+This plugin gives us two functionalities
 
-  -an object @conditions to be used in index action with our favourite find method which accepts :conditions parameter,
-   such as find or paginate -from will paginate-.
+	-filters for narrowing index scope
+	-ordenation for index elements
 
-  -an object @filter which is the result of parsing params[:filter]
+
 
 ==Installation
 
-  script/plugin install git://github.com/eLafo/index-filter.git
+  script/plugin install git://github.com/eLafo/sortable_index_filters.git
 
 ==Instructions
+
+====Filters
+
+It creates two objects:
+
+  an object @conditions to be used in index action with our favourite find method which accepts :conditions parameter,
+   such as find or paginate -from will paginate-.
+
+  an object @filter which is the result of parsing params[:filter]
 
 In order to setup a filter for index action, you should to insert the next line in your controller
 
@@ -48,6 +57,31 @@ and the view could be like this:
   </form>
 
 
+====Ordenation
+
+If you want your index elements to be sortable by fields, you must include this line in your controller
+
+	has_sortable_fields
+
+Controller will expect two params:
+
+	index_order_field: The field which index results are sorted by
+	index_order_direction: The sorting direction -ASC or DESC
+
+You can use the helper 
+	
+	method sortable_field(name, field, options = {}, html_options = {})
+	
+	It creates a link to index url with index_order_field and index_order_direction params
+
+	name: name for the link
+	field: field for index elements to be sorted by
+
+Example
+
+	<%= sortable_field('code', :code) %></th>
+
+
 ==Notes
 
   This plugin is based on my mentor Daniel Mata's code http://danimataonrails.blogspot.com
@@ -55,7 +89,7 @@ and the view could be like this:
 
 == Copyright
 
-(C) 2010 {ASPgems S.L.}[http://www.aspgems.com]
+(C) 2010 Javier Lafora Rey
 
 
 == License
